# infinite-stock-trader

./: README.md  docker-compose.yaml
.github/workflows/: main.yml  schedule.yml
docker/: dev.dockerfile
docker-volumes/: .gitignore  example.env
docs/: README-Architecture.md  README-EarlyResearch.md  README-ProjectSetup.md  README-TradingAlgorithms.md
workspace/: main.py  pyproject.toml
workspace/src/: trader.py
